--- a/references/refs.bib
+++ b/references/refs.bib
@@ -23,3 +23,13 @@
   translator      = {Barbosa, Ricardo Corr{\^{e}}a},
   year            = {2009}
 }
+
+@book{kuhn1978,
+  address         = {São Paulo},
+  author          = {Kuhn, Thomas S.},
+  edition         = {2},
+  publisher       = {Perspectiva},
+  title           = {{A Estrutura das Revoluções Científicas}},
+  translator      = {Beatriz Vianna Boeira e Nelson Boeira},
+  year            = {1978}
+}
